Fixed login button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#"> Features</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Contact</a></li>
-            <button type="button" class="login-btn">Login</button>
+            <li><button type="button" class="login-btn">Login</button></li>           
           </ul>
 
           <div class="social_icons ds-hidden ds-flex">
